[package]
name = "cga"
version = "0.0.0"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2018"
description = """
Easy-to-use and portably SIMD-optimized implementation of conformal geometric algebra (CGA).
Applicable for real-time animations, computational geometry, rigid body dynamics, games, etc.
"""
documentation = "https://docs.rs/cga"
repository = "https://github.com/qu1x/cga"
readme = "README.md"
license = "MPL-2.0"
keywords = [
	"dual-quaternion",
	"conformal-geometry",
	"geometric-algebra",
	"computer-graphics",
	"rigid-body-dynamics",
]
categories = [
	"no-std",
	"science",
	"graphics",
	"mathematics",
	"game-development",
]
include = [
	"src/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*",
]
